finished up drawer; fixed scrollbars on chrome

--- a/src/theme/_smui-theme.scss
+++ b/src/theme/_smui-theme.scss
@@ -3,7 +3,7 @@
 @use '@material/theme/color-palette';
 
 
-$primary: #00796b;
+$primary: #006e54;
 $secondary: #a5d6a7;
 $surface: #fff;
 $background: #fff;
